tdf#163135 eliminate native "secure coding" warning

Starting in macOS Sonoma, a warning is printed at launch that complains
that -[NSApplicationDelegate applicationSupportsSecureRestorableState:]
is not implemented so implement that selector.

Change-Id: Idfb62c271af5256270361efdd458f2ef9ea4c40b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173882
Tested-by: Jenkins
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>