vcl/inc/osx/vclnsapp.h
@@ -34,7 +34,7 @@ class AquaSalFrame;
 @end
 
 // our very own application
-@interface VCL_NSApplication : NSApplication
+@interface VCL_NSApplication : NSApplication <NSApplicationDelegate>
 {
 }
 -(void)applicationDidFinishLaunching:(NSNotification*)pNotification;
@@ -62,6 +62,7 @@ class AquaSalFrame;
 -(void)applicationWillResignActive: (NSNotification *)pNotification;
 #endif
 -(BOOL)applicationShouldHandleReopen: (NSApplication*)pApp hasVisibleWindows: (BOOL)bWinVisible;
+-(BOOL)applicationSupportsSecureRestorableState: (NSApplication *)pApp;
 -(void)setDockIconClickHandler: (NSObject*)pHandler;
 @end
 
