vcl/osx/vclnsapp.mm
@@ -468,6 +468,11 @@
     return YES;
 }
 
+- (BOOL)applicationSupportsSecureRestorableState: (NSApplication *)pApp
+{
+    return YES;
+}
+
 -(void)setDockIconClickHandler: (NSObject*)pHandler
 {
     GetSalData()->mpDockIconClickHandler = pHandler;
